--- a/eticket/appsettings.json
+++ b/eticket/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "Connectionstrings": {
+
+    "DefaultConnetionString": "Data Source=DESKTOP-AN5PHJM\\SQLEXPRESS;Initial Catalog=ecommerce-app-dB;Integrated Security=True;Pooling=False"
+ },
   "AllowedHosts": "*"
 }
